# 2025_GTra

./: .gitignore  README.md  project.toml  pyproject.toml  setup.py
answer_paths/: COVID_answer.csv  HSPC_answer.csv  MND_answer.csv
benchmark/CStreet/codes/: hspc_trj.ipynb  mnd_trj.ipynb
benchmark/scEGOT/: HSPC_evaluation.ipynb
case_study/: MND_study.ipynb
case_study/COVID/: COVID_study.ipynb  clinical.csv  post_analysis.py
case_study/COVID/COVID_out/P1_res/: P1_pattern_centroid.csv  P1_pattern_genes.csv
case_study/COVID/COVID_out/P3_res/: P3_pattern_centroid.csv  P3_pattern_genes.csv
case_study/HSPC/HSPC_out/: hspc_pattern_centroid.csv  hspc_pattern_genes.csv
case_study/HSPC_out/: hspc_pattern_centroid.csv  hspc_pattern_genes.csv
case_study/MND/: MND_study.ipynb
case_study/MND/MND_out/: Mouse_pattern_centroid.csv  Mouse_pattern_genes.csv
case_study/MND_out/: Mouse_pattern_centroid.csv  Mouse_pattern_genes.csv
src/: GTra.py  cluster_func.py  gutils.py  post_analysis.py  preproc.py  setup.py  visualize.py
src/GTra/: GTra.py  __init__.py  cluster_func.py  gutils.py  preproc.py
src/GTra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gtra/: __init__.py  cluster_func.py  core.py  preproc.py  utils.py  visualize.py
src/gtra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src_modi/: GTra.py  cluster_func.py  gutils.py  preproc.py  visualize.py
src_origin/GTra/: post_analysis.py  visualize.py
src_origin/GTra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tutorials/: tutorial.ipynb
(+14 files in other folders)
