[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gtra"
version = "0.1.0"
description = "Gene expression pattern-based Trajectory analysis"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "Jaeyeon Jang"}, 
  { email = "wodus1035@knu.ac.kr"}
]

license = { text = "MIT" }

keywords = ["single-cell", "scRNA-seq", "trajectory", "gene module"]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scanpy",
  "anndata",
  "scikit-learn",
  "networkx",
  "matplotlib",
  "seaborn",
  "plotly",
  "tqdm",
  "joblib",
  "kneed",
  "statsmodels",
  "leidenalg",
  "igraph",
  "soyclustering",
  "kaleido",
  "gseapy==1.0.6"
]

[project.urls]
Homepage = "https://github.com/wodus1035/2025_GTra"
Repository = "https://github.com/wodus1035/2025_GTra"

[tool.setuptools.packages.find]
where = ["src"]
